ran some ugliness inspections
git-svn-id: file:///tmp/owch2_2/branches/hyperarchy@8 afdb5d6e-910f-0410-ac8a-c8b07d4428ab